After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736810 - gdbus: Fix leak in g_dbus_message_print()
gdbus: Fix leak in g_dbus_message_print()
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gdbus
unspecified
Other All
: Normal normal
: ---
Assigned To: David Zeuthen (not reading bugmail)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-09-17 15:03 UTC by Christophe Fergeau
Modified: 2016-11-22 20:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdbus: Fix leak in g_dbus_message_print() (861 bytes, patch)
2014-09-17 15:03 UTC, Christophe Fergeau
committed Details | Review

Description Christophe Fergeau 2014-09-17 15:03:06 UTC
This leak only happens when using G_DBUS_DEBUG=message or similar, but
it's nicer to be valgrind-clean even in these cases.
Comment 1 Christophe Fergeau 2014-09-17 15:03:11 UTC
Created attachment 286390 [details] [review]
gdbus: Fix leak in g_dbus_message_print()
Comment 2 Colin Walters 2016-11-22 20:01:12 UTC
Review of attachment 286390 [details] [review]:

Yep.
Comment 3 Colin Walters 2016-11-22 20:07:44 UTC
Attachment 286390 [details] pushed as a4012ab - gdbus: Fix leak in g_dbus_message_print()